<resources>
    <string name="app_name" translatable="false">Simple Flat</string>
    <string name="setting_button">Settings</string>
    <string name="title_activity_settings" translatable="false">SettingsActivity</string>

    <string name="rgbv_r_label">R Value</string>
    <string name="rgbv_g_label">G Value</string>
    <string name="rgbv_b_label">B Value</string>
    <string name="brightnessv_label">Brightness</string>

    <string name="tab_settings">Settings</string>
    <string name="tab_profiles">Profiles</string>

    <string name="button_new">New</string>
    <string name="button_save">Save</string>
    <string name="button_load">Load</string>
    <string name="button_delete">Delete</string>
    <string name="button_export">Export profiles</string>
    <string name="button_import">Import profiles</string>

    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="simport">Import</string>

    <string name="create_profile_title">New profile</string>
    <string name="insert_profile_name">Insert profile name</string>
    <string name="profiles_files">Profiles Files</string>

    <string name="profile_created">Profile created</string>
    <string name="profile_saved">Profile saved</string>
    <string name="profile_loaded">Profile loaded</string>
    <string name="profile_deleted">Profile deleted</string>
    <string name="profile_name_required">Profile name required!</string>
    <string name="profile_export_failed">Profile export failed!</string>
    <string name="profile_export_success">Success, file:</string>
    <string name="select_filename_please">Please select a file to import!</string>
    <string name="delete_old_profile_request">Do I delete old profiles?</string>
    <string name="profile_import_failed">Profile import failed!</string>
    <string name="profile_import_failed_empty">I don\'t import a file with zero profiles!</string>
    <string name="import_successful">Import successful!</string>
</resources>